--- a/html/css/sass/_4-colours.scss
+++ b/html/css/sass/_4-colours.scss
@@ -29,6 +29,10 @@ $light-pastel: #C0E6F3;
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */
 }
 
+.icon-pattern {
+  background-repeat: repeat;
+}
+
 
 /// Calls to Action / Highlights
 
