--- a/html/css/output/patterns/06-pagination.css
+++ b/html/css/output/patterns/06-pagination.css
@@ -5,6 +5,9 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
+.icon-pattern {
+  background-repeat: repeat; }
+
 /* Pagination */
 ol.pagination {
   list-style-type: none; }
