--- a/html/css/output/patterns/11-images-with-captions.css
+++ b/html/css/output/patterns/11-images-with-captions.css
@@ -5,6 +5,9 @@
     used in browsers that support it (a 'coincidence'
     feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
 
+.icon-pattern {
+  background-repeat: repeat; }
+
 .image {
   display: inline-block;
   margin: 0 0 2em 0;
