--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1274,6 +1274,8 @@ pre {
   margin-bottom: 0; }
   .main-nav li:nth-child(2n) {
     background-color: #002031; }
+  .main-nav li:hover a {
+    text-decoration: underline; }
 
 .main-nav li a {
   display: inline-block;
@@ -1312,15 +1314,23 @@ pre {
   visibility: visible;
   height: auto; }
 
-.main-nav .sub-menu li {
-  background-color: #003552; }
-  .main-nav .sub-menu li:nth-child(2n) {
-    background-color: #002d46; }
-
 .main-nav .sub-menu li a {
-  font-size: 1em; }
+  font-size: 1em;
+  width: 100%;
+  text-decoration: none; }
   .main-nav .sub-menu li a:before {
     content: "— "; }
+
+.main-nav .sub-menu li {
+  background-color: #003552; }
+  .main-nav .sub-menu li:hover {
+    background-color: #002031; }
+    .main-nav .sub-menu li:hover a {
+      text-decoration: underline; }
+  .main-nav .sub-menu li:nth-child(2n) {
+    background-color: #002d46; }
+    .main-nav .sub-menu li:nth-child(2n):hover {
+      background-color: #002031; }
 
 .js .nav__trigger {
   position: fixed;
@@ -1420,11 +1430,7 @@ pre {
   .main-nav .sub-menu li {
     height: auto;
     padding: 0;
-    font-size: 1em; }
-    .main-nav .sub-menu li a {
-      text-decoration: none; }
-    .main-nav .sub-menu li:hover a {
-      text-decoration: underline; } }
+    font-size: 1em; } }
 
 @media only all and (min-width: 58.75em) {
   .main-nav li.contact-us {
