--- a/html/css/output/patterns/0-navigation.css
+++ b/html/css/output/patterns/0-navigation.css
@@ -30,8 +30,6 @@
   margin-bottom: 0; }
   .main-nav li:nth-child(2n) {
     background-color: #002031; }
-  .main-nav li:hover a {
-    text-decoration: underline; }
 
 .main-nav li a {
   display: inline-block;
@@ -72,17 +70,19 @@
 
 .main-nav .sub-menu li a {
   font-size: 1em;
-  width: 100%;
-  text-decoration: none; }
+  width: 100%; }
   .main-nav .sub-menu li a:before {
     content: "— "; }
+
+.main-nav li:hover a.parent-item {
+  text-decoration: underline; }
 
 .main-nav .sub-menu li {
   background-color: #003552; }
   .main-nav .sub-menu li:hover {
     background-color: #002031; }
-    .main-nav .sub-menu li:hover a {
-      text-decoration: underline; }
+  .main-nav .sub-menu li:hover a {
+    text-decoration: underline; }
   .main-nav .sub-menu li:nth-child(2n) {
     background-color: #002d46; }
     .main-nav .sub-menu li:nth-child(2n):hover {
@@ -136,10 +136,13 @@
 
 @media only all and (min-width: 56em) {
   nav {
-    background-color: #003552; }
+    background-color: #003552;
+    margin: 0 0 1.5em 0; }
   .nav-collapse .main-nav {
     padding: 0 5% 0 5%;
-    height: 6em; }
+    height: 6em;
+    max-width: 90em;
+    margin: 0 auto 0 auto; }
   .main-nav li {
     font-size: 0.9em;
     font-weight: 400;
@@ -154,8 +157,6 @@
       background-color: inherit; }
     .main-nav li:last-child {
       margin-right: 0; }
-    .main-nav li:hover a {
-      text-decoration: underline; }
   .main-nav li.home, .main-nav li.contact-us {
     width: auto;
     max-width: 10%; }
