Body background pattern, colour and typography tweaks for text accessibility over background

--- a/html/assets-icons/output/icons.fallback.css
+++ b/html/assets-icons/output/icons.fallback.css
@@ -2,6 +2,8 @@
 
 .icon-arrow-up { background-image: url('png/arrow-up.png'); background-repeat: no-repeat; }
 
+.icon-body-background { background-image: url('png/body-background.png'); background-repeat: no-repeat; }
+
 .icon-close { background-image: url('png/close.png'); background-repeat: no-repeat; }
 
 .icon-header-left { background-image: url('png/header-left.png'); background-repeat: no-repeat; }
