--- a/html/css/sass/_Patterns-ImportMap.scss
+++ b/html/css/sass/_Patterns-ImportMap.scss
@@ -3,6 +3,7 @@
 @import "patterns/0-footer";
 @import "patterns/0-header";
 @import "patterns/0-navigation";
+@import "patterns/01-body-background";
 @import "patterns/01-layout-cap";
 @import "patterns/02-buttons-and-calls-to-action";
 @import "patterns/03-blockquote";
