--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -483,7 +483,7 @@ i, em {
   font-style: italic; }
 
 a {
-  color: #008EBE;
+  color: #0079A1;
   border-bottom: 0.1em dotted #008EBE;
   text-decoration: none; }
 
@@ -526,6 +526,17 @@ a {
 font-family: "proxima-nova";
 
 //////// */
+body {
+  background-color: #ffffff;
+  background-attachment: fixed;
+  background-size: contain; }
+  @media only all and (min-width: 56em) {
+    body {
+      background-size: auto; } }
+
+.bg-light-pastel {
+  background-color: #C0E6F3; }
+
 #guidenav-trigger {
   display: none; }
 
@@ -617,7 +628,6 @@ Performance is dramatically improved because a 9999px box is not drawn. Noticeab
   margin: 0 auto 1.5em auto; }
 
 .guide .styleguide {
-  background-color: #fff;
   padding: 2em 8% 1.5em 8%; }
   @media only all and (min-width: 41em) {
     .guide .styleguide {
@@ -753,6 +763,9 @@ pre {
 
 .swatches span.mid {
   background-color: #008EBE; }
+
+.swatches span.mid-text {
+  background-color: #0079A1; }
 
 .swatches span.dark {
   background-color: #003552; }
@@ -985,6 +998,7 @@ pre {
 @media only all and (min-width: 41em) {
   .js .guidenav-collapse {
     position: fixed !important;
+    top: 0;
     clip: auto; } }
 
 .pattern {
@@ -1475,6 +1489,35 @@ pre {
   .main-nav li.about a.parent-item {
     max-width: 55%; } }
 
+.pattern {
+  background: url(../../assets/pattern.png);
+  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern {
+  background-repeat: repeat; }
+
+body {
+  background-color: #ffffff;
+  background-attachment: fixed;
+  background-size: contain; }
+  @media only all and (min-width: 56em) {
+    body {
+      background-size: auto; } }
+
+/*
+body {
+  background: url(../../assets-icons/body-background.png);
+  background: url(../../assets-icons/body-background.svg),
+    linear-gradient(transparent, transparent);
+    
+    // ^ This trick ensures that our background SVG is only 
+    // used in browsers that support it (a 'coincidence'
+    // feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image 
+}
+*/
 .container {
   margin: 0;
   width: 100%; }
