--- a/html/assets-icons/output/icons.fallback.css
+++ b/html/assets-icons/output/icons.fallback.css
@@ -6,6 +6,14 @@
 
 .icon-close { background-image: url('png/close.png'); background-repeat: no-repeat; }
 
+.icon-footer-partner-cs { background-image: url('png/footer-partner-cs.png'); background-repeat: no-repeat; }
+
+.icon-footer-partner-es { background-image: url('png/footer-partner-es.png'); background-repeat: no-repeat; }
+
+.icon-footer-partner-nls { background-image: url('png/footer-partner-nls.png'); background-repeat: no-repeat; }
+
+.icon-footer-partner-sfe { background-image: url('png/footer-partner-sfe.png'); background-repeat: no-repeat; }
+
 .icon-header-left { background-image: url('png/header-left.png'); background-repeat: no-repeat; }
 
 .icon-header-right { background-image: url('png/header-right.png'); background-repeat: no-repeat; }
