--- a/html/css/output/patterns/0-footer.css
+++ b/html/css/output/patterns/0-footer.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .pattern {
   background: url(../../assets/pattern.png);
   background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
@@ -9,127 +8,14 @@
 .icon-pattern {
   background-repeat: repeat; }
 
-.footer {
+.footer__top {
   background-color: #008EBE;
-  width: 100%;
-  border-top: 0.8em solid #52CEF4;
-  padding: 1em 0 0 0; }
-
-.footer__container {
-  width: 90%;
-  margin: 0 auto; }
-
-.footer__container.footer__container--dark {
-  width: 100%;
-  padding: 0 5%;
-  margin: 0;
-  background-color: #002C44;
-  border-top: 0.9em solid #003552;
-  max-width: none; }
-
-.footer__container .heading__medium {
-  color: #ffffff;
-  margin: 0.3em auto 0 auto;
-  line-height: 1.1em;
-  border-bottom: none; }
-  @media only all and (min-width: 36.26em) {
-    .footer__container .heading__medium {
-      width: 100%; } }
-
-.footer__twitter {
-  width: auto;
-  max-width: 15.4em;
-  height: 2.7em;
-  display: inline-block;
-  background-color: #002C44;
-  margin: 1.6em 0;
-  border-bottom: 0.2em solid #002539;
-  border-top: 0.1em solid #6ad5f6; }
-  .footer__twitter:hover .heading {
-    text-decoration: underline;
-    background-color: #002539; }
-
-.footer__twitter .heading {
-  font-size: 1em;
-  color: #ffffff;
-  font-weight: 500;
-  display: inline-block;
-  float: right;
-  width: auto;
-  padding: 0.6em 0.8em 0.6em 0.8em;
-  max-height: 2.5em;
-  margin: 0;
-  -webkit-transition: background-color 0.12s ease-in-out;
-  -moz-transition: background-color 0.12s ease-in-out;
-  -ms-transition: background-color 0.12s ease-in-out;
-  -o-transition: background-color 0.12s ease-in-out;
-  transition: background-color 0.12s ease-in-out; }
-
-.footer__twitter .icon {
-  display: inline-block;
-  float: right;
-  width: 2.5em;
-  height: 2.5em;
-  background: url('../../assets/twitter-icon.png');
-  background-repeat: no-repeat;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -ms-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%; }
-  @media (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 2/1), (min-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx) {
-    .footer__twitter .icon {
-      background: url('../../assets/twitter-icon@2x.png');
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -ms-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: 100%; } }
+  padding: 1.2em 8% 1.5em 8%; }
 
 .footer__nav {
-  margin-bottom: 1.5em; }
+  background-color: #007da7; }
 
-.footer__nav li {
-  list-style-type: none;
-  margin: 0 0 0.8em 0; }
-
-.footer__nav a {
-  color: #002C44;
-  font-weight: 500;
-  text-transform: uppercase; }
-  .footer__nav a:after {
-    content: " »"; }
-  .footer__nav a:hover {
-    border-bottom: 0.1em dotted #ffffff; }
-
-.footer__terms {
-  margin: 1.5em 0 2em 0;
-  color: #C0E6F3; }
-
-@media only all and (min-width: 41em) {
-  .footer {
-    padding-top: 1.5em; }
-  .footer__container {
-    width: 90%;
-    margin: 0 auto;
-    max-width: 80em; }
-  .footer__container .heading__medium {
-    float: left;
-    margin-top: 0.5em;
-    width: 50%; }
-  .footer__twitter {
-    float: right;
-    margin: 0.5em 0 0 0;
-    width: 50%; }
-  .footer__nav {
-    width: 100%;
-    float: left;
-    margin-top: 2em; }
-  .footer__nav li {
-    float: left;
-    margin-right: 4.5%; }
-  .footer__terms {
-    margin: 1.5em auto 2em auto;
-    max-width: 80em; } }
+footer {
+  background-color: #003552; }
 
 /*# sourceMappingURL=0-footer.css.map */
