--- a/html/css/output/patterns/01-layout-cap.css
+++ b/html/css/output/patterns/01-layout-cap.css
@@ -1,24 +1,12 @@
 .container {
-  margin: 0;
+  margin: 0 auto;
   width: 100%; }
 
-.footer__container.footer__container--dark {
-  max-width: none; }
-
-@media only all and (min-width: 41em) {
+@media only all and (min-width: 56em) {
   .container {
     margin: 0 auto;
-    width: 100%; }
-  .header__contents {
-    width: 90%;
-    margin: 0 auto;
-    max-width: 90em; }
-  .footer__container {
-    width: 90%;
-    margin: 0 auto;
-    max-width: 90em; }
-  .footer__terms {
-    margin: 1.5em auto 2em auto;
-    max-width: 90em; } }
+    padding: 0;
+    width: 100%;
+    max-width: 80em; } }
 
 /*# sourceMappingURL=01-layout-cap.css.map */
