--- a/html/css/sass/patterns/01-layout-cap.scss
+++ b/html/css/sass/patterns/01-layout-cap.scss
@@ -1,51 +1,18 @@
-// New style for constraining main 'body' layout width:
+// Utility class for constraining main 'body' layout width:
 
 .container {
-  margin: 0;
+  margin: 0 auto;
   width: 100%;
 }
 
-/// The following guide styles have also been changed
-/// to align with this layout cap:
-
-.footer__container.footer__container--dark {
-  max-width: none; // Added
-}
-
-// ::::::::::::::::::::::::::::::::::::::::: //
-
-// Breakpoint from handheld -> full layout; 
-// your choice may vary
-
-@media only all and (min-width: 41em) {
+@media only all and (min-width: 56em) {
   
-  .container {
+ .container {
     margin: 0 auto;
+    padding: 0;
     width: 100%;
-  }
+    max-width: 80em;
+  } 
   
-  /// The following guide styles have also been changed
-  /// to align with this layout cap:
-  
-  /// 0-header.scss:
-  .header__contents {
-    width: 90%;
-    margin: 0 auto; // From 0 5% to <--
-    max-width: 90em; // Added
-  }
-  
-  /// 0-footer.scss:
-  .footer__container {
-    width: 90%;
-    margin: 0 auto; // From 0 5% to <--
-    max-width: 90em; // Added
-  }
-  
-  .footer__terms {
-    //width: 100%; // Removed
-    margin: 1.5em auto 2em auto; // From 1.5em 0 2em 0 to <--
-    max-width: 90em; // Added
-    // float: left; // Removed
-  }
-  
-}
+} // min 56em
+
