--- a/html/css/output/patterns/0-footer.css
+++ b/html/css/output/patterns/0-footer.css
@@ -12,20 +12,63 @@
   background-color: #008EBE;
   padding: 1.2em 8% 1.5em 8%; }
 
+.footer__top__report-issues {
+  margin-bottom: 0.5em; }
+
 .footer__top__report-issues span, .footer__top__partners span {
   font-size: 1.25em;
   color: #ffffff;
   font-weight: 600;
   display: inline-block;
   width: 100%;
+  max-width: 14.125em;
   margin: 0 0 1em 0; }
+
+.footer__top__partners span {
+  margin: 0 0 2em 0; }
+
+.footer__top__partners i {
+  width: 100%;
+  margin: 0 0 2em 0; }
+
+.icon-footer-partner-es {
+  max-width: 11.375em;
+  height: 4.6875em; }
+
+.icon-footer-partner-nls {
+  max-width: 12.25em;
+  height: 7.0625em; }
+
+.icon-footer-partner-cs {
+  max-width: 8.3125em;
+  height: 5.25em;
+  margin: 0; }
+
+.icon-footer-partner-sfe {
+  width: 100%;
+  max-width: 13.75em;
+  height: 5.8125em; }
 
 .footer__nav {
   background-color: #007da7;
-  padding: 1.2em 8% 1.5em 8%; }
+  padding: 1.5em 8% 1.1em 8%; }
+
+.footer__nav li {
+  list-style-type: none; }
+
+.footer__nav li a {
+  font-size: 1em;
+  font-weight: 400;
+  color: #ffffff; }
 
 footer {
   background-color: #003552;
-  padding: 1.2em 8% 1.5em 8%; }
+  padding: 1.8em 8% 2.5em 8%; }
+
+footer span {
+  color: #ffffff;
+  display: inline-block;
+  margin: 0 0 2em 0;
+  line-height: 1.3em; }
 
 /*# sourceMappingURL=0-footer.css.map */
