--- a/html/css/output/patterns/0-footer.css
+++ b/html/css/output/patterns/0-footer.css
@@ -18,8 +18,8 @@
 .footer__top__report-issues span, .footer__top__partners span {
   font-size: 1.25em;
   color: #ffffff;
-  font-weight: 600;
-  display: inline-block;
+  font-weight: 400;
+  display: block;
   width: 100%;
   max-width: 14.125em;
   margin: 0 0 1em 0; }
@@ -29,7 +29,8 @@
 
 .footer__top__partners i {
   width: 100%;
-  margin: 0 0 2em 0; }
+  margin: 0 0 2em 0;
+  display: block; }
 
 .icon-footer-partner-es {
   max-width: 11.375em;
@@ -51,7 +52,8 @@
 
 .footer__nav {
   background-color: #007da7;
-  padding: 1.5em 8% 1.1em 8%; }
+  padding: 1em 8% 0.5em 8%;
+  text-align: center; }
 
 .footer__nav li {
   list-style-type: none; }
@@ -63,12 +65,112 @@
 
 footer {
   background-color: #003552;
-  padding: 1.8em 8% 2.5em 8%; }
+  padding: 2.4em 8% 3.5em 8%;
+  text-align: center; }
 
 footer span {
-  color: #ffffff;
   display: inline-block;
   margin: 0 0 2em 0;
+  color: #ffffff;
+  font-weight: 300;
+  text-align: center;
   line-height: 1.3em; }
+
+footer i {
+  display: block;
+  margin: 0 auto; }
+
+@media only all and (min-width: 26.25em) {
+  .footer__nav li {
+    width: 44%;
+    float: left;
+    margin-top: 0.5em; }
+    .footer__nav li:nth-child(1), .footer__nav li:nth-child(2) {
+      margin-bottom: 1em; } }
+
+@media only all and (min-width: 32.5em) {
+  .footer__top, .footer__top span {
+    text-align: center;
+    max-width: 100%; }
+  .footer__top__partners a {
+    width: 50%;
+    float: left;
+    text-align: center; }
+  .footer__top__partners .partner-cs {
+    width: 100%; }
+  .footer__top__partners .icon-footer-partner-es {
+    margin: 0.3em auto 2.2em auto; }
+  .footer__top__partners .icon-footer-partner-nls {
+    margin: 0 auto 2.5em auto; }
+  .footer__top__partners .icon-footer-partner-cs {
+    display: inline-block;
+    clear: both;
+    float: none;
+    margin: 0 auto 1em auto; } }
+
+@media only all and (min-width: 45em) {
+  .footer__top__partners a {
+    width: 30%;
+    margin-right: 5%;
+    float: left;
+    text-align: center; }
+  .footer__top__partners .partner-cs {
+    width: 30%;
+    margin-right: 0; }
+  .footer__top__partners .icon-footer-partner-es {
+    margin: 0.3em auto 1.7em auto; }
+  .footer__top__partners .icon-footer-partner-nls {
+    margin: 0 auto 2em auto; }
+  .footer__top__partners .icon-footer-partner-cs {
+    display: inline-block;
+    clear: both;
+    float: none;
+    margin: 0 auto 1em auto; }
+  .footer__nav li {
+    width: 25%; }
+    .footer__nav li:nth-child(1), .footer__nav li:nth-child(2) {
+      margin-bottom: auto; }
+  footer span {
+    max-width: 80%; } }
+
+@media only all and (min-width: 63.9375em) {
+  .footer__top__report-issues span, .footer__top__partners span {
+    text-align: left;
+    max-width: 13.25em;
+    font-size: 1.1em; }
+  .footer__top__report-issues {
+    width: 25%;
+    float: right;
+    text-align: left; }
+  .footer__top__partners {
+    width: 65%;
+    margin-right: 10%;
+    float: left;
+    text-align: left; }
+  .footer__top__partners span {
+    margin-bottom: 1em; }
+  .footer__top__partners a {
+    text-align: left;
+    margin-right: 10%; }
+  .footer__top__partners .partner-cs {
+    width: 20%;
+    margin-right: 0; }
+  .footer__top__partners .icon-footer-partner-es {
+    margin: 0.3em 0 0 0; }
+  .footer__top__partners .icon-footer-partner-nls, .footer__top__partners .icon-footer-partner-cs {
+    margin: 0 0 0.5em 0; }
+  footer span {
+    max-width: 70%; } }
+
+@media only all and (min-width: 82.25em) {
+  .footer__top__report-issues {
+    width: 20%;
+    float: right;
+    text-align: left; }
+  .footer__top__partners {
+    width: 60%;
+    margin-right: 20%;
+    float: left;
+    text-align: left; } }
 
 /*# sourceMappingURL=0-footer.css.map */
