--- a/html/css/output/patterns/02-buttons-and-calls-to-action.css
+++ b/html/css/output/patterns/02-buttons-and-calls-to-action.css
@@ -18,6 +18,7 @@
   font-weight: 600;
   cursor: pointer;
   margin-bottom: 1.5em;
+  border-bottom: none;
   -webkit-transition: background-color 0.15s ease-in-out;
   -moz-transition: background-color 0.15s ease-in-out;
   -ms-transition: background-color 0.15s ease-in-out;
